# parascene-desktop

./: .env.example  .gitignore  LOCAL_TOOLS.md  PREVIEW-STREAM-FAILURE-NOTES.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: macos-desktop.yml
docs/: PLAN-architecture-principles.md  PLAN-backend-ownership.md  PLAN-ffmpeg.md  PLAN-from-chatgpt.md  PLAN-image-clip-preview.md  PLAN-library-sync.md  PLAN-macos-desktop-shell.md  PLAN-mv-storyboard-lab.md  PLAN-parascene-generation.md  PLAN-preview-mse.md  PLAN-song-to-video.md  PLAN-timeline-fill.md  PLAN-video-implementation.md  mv-build-retrospective.md
docs/mockups/: README.md
scripts/: clean-dmg.sh  prime-demucs.sh
src/: App.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth_store.rs  http_client.rs  lib.rs  main.rs  media_stream.rs  oauth_listener.rs
src-tauri/src/preview/: cache.rs  compose.rs  fmp4.rs  mod.rs  protocol.rs  remux.rs  session.rs  timeline.rs
src/app/: AppChrome.tsx  ShellProvider.tsx  UiDiagnosticsModal.tsx  diagnosticsEvents.ts  shell.test.tsx  shellSession.test.ts  shellSession.ts  uiDiagnostics.test.ts  uiDiagnostics.ts
src/auth/: AuthProvider.tsx  LoginScreen.tsx  ReauthOverlay.tsx  errors.test.ts  errors.ts  session.ts
src/capabilities/: index.ts
src/fixtures/: mockProject.ts
src/jobs/: jobsClient.ts  types.ts
src/lab/: LabImagePicker.tsx  LabLyricCaptionEditor.tsx  LabMediaWaveform.tsx  LabMvBuildModule.tsx  LabMvModules.tsx  LabStoryboardEditor.tsx  LabStoryboardPreview.tsx  LabVideoRangePicker.tsx  LabWhisperWordTrack.tsx  a2vGeneration.ts  audioTools.ts  ingestCreation.ts  labDeps.ts  labPrompts.ts  labSession.ts  (+24 more)
(+95 files in other folders)
