[package]
name = "parascene-desktop"
version = "0.1.0"
description = "Parascene Desktop"
authors = ["Parascene"]
edition = "2021"

[lib]
name = "parascene_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
