[package]
name = "parascene-desktop"
version = "0.1.0"
description = "Parascene Desktop"
authors = ["Parascene"]
edition = "2021"

[lib]
name = "parascene_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
http-range = "0.1"
percent-encoding = "2"
keyring = { version = "3", features = ["apple-native"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["fs", "io-util"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
base64 = "0.22"
